use a circular progress bar

--- a/gearshift/src/main/res/layout/torrents_listview.xml
+++ b/gearshift/src/main/res/layout/torrents_listview.xml
@@ -14,7 +14,7 @@
                   android:drawSelectorOnTop="false" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <TextView android:id="@+android:id/empty"
+    <TextView android:id="@android:id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="sans-serif-light"
