--- a/gearshift/src/main/res/layout/torrent_list_item.xml
+++ b/gearshift/src/main/res/layout/torrent_list_item.xml
@@ -11,57 +11,66 @@
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:background="@drawable/list_activated_holo_light"
     android:gravity="center_vertical"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:textColor="@drawable/list_item_color"
-        android:textAppearance="?android:attr/textAppearanceListItem"
-        android:textSize="@dimen/torrent_list_name_text_size"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/traffic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@drawable/list_item_color"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textSize="@dimen/torrent_list_traffic_text_size" />
+    android:orientation="horizontal" >
 
     <ProgressBar
         android:id="@+id/progress"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginRight="16dp"
         android:indeterminate="false"
-        android:progressDrawable="@drawable/torrent_progress_bar"
+        android:progressDrawable="@drawable/torrent_circular_progress_bar"
         android:max="100"
-        android:progress="0" />
+        android:progress="0"
+        android:layout_gravity="center_vertical"/>
 
-    <TextView
-        android:id="@+id/status"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@drawable/list_item_color"
-        android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
-        android:textSize="@dimen/torrent_list_status_text_size" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/error_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:scrollHorizontally="true"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@drawable/list_item_error_color"
-        android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
-        android:textSize="@dimen/torrent_list_error_text_size"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@drawable/list_item_color"
+            android:textAppearance="?android:attr/textAppearanceListItem"
+            android:textSize="@dimen/torrent_list_name_text_size"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/traffic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@drawable/list_item_color"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:textSize="@dimen/torrent_list_traffic_text_size" />
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@drawable/list_item_color"
+            android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
+            android:textSize="@dimen/torrent_list_status_text_size" />
+
+        <TextView
+            android:id="@+id/error_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
+            android:scrollHorizontally="true"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@drawable/list_item_error_color"
+            android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
+            android:textSize="@dimen/torrent_list_error_text_size"
+            android:visibility="gone"/>
+    </LinearLayout>
+
 
 </LinearLayout>
