--- a/gearshift/src/main/res/layout/torrent_list_item.xml
+++ b/gearshift/src/main/res/layout/torrent_list_item.xml
@@ -13,17 +13,34 @@
     android:gravity="center_vertical"
     android:orientation="horizontal" >
 
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
-        android:indeterminate="false"
-        android:progressDrawable="@drawable/torrent_circular_progress_bar"
-        android:max="100"
-        android:progress="0"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <View
+                android:id="@+id/type_indicator"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+        </FrameLayout>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/torrent_circular_progress_bar"
+            android:max="100"
+            android:progress="0"/>
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
