--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -25,6 +25,8 @@
     <color name="filter_highlight_primary">#E68305</color>
     <color name="filter_highlight_secondary">#C98733</color>
 
+    <color name="check_indicator">#757575</color>
+
     <color name="torrent_color_1">#01579b</color>
     <color name="torrent_color_2">#006064</color>
     <color name="torrent_color_3">#004d40</color>
