--- a/gearshift/src/main/res/layout/torrent_list_item.xml
+++ b/gearshift/src/main/res/layout/torrent_list_item.xml
@@ -19,16 +19,11 @@
         android:layout_marginRight="16dp"
         android:layout_gravity="center">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-
-            <View
-                android:id="@+id/type_indicator"
-                android:layout_width="50dp"
-                android:layout_height="50dp"/>
-        </FrameLayout>
+        <View
+            android:id="@+id/type_indicator"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"/>
 
         <ProgressBar
             android:id="@+id/progress"
