Drop support for v15
Add the status text as a subtitle in the detail page

--- a/gearshift/src/main/res/drawable/list_item_color.xml
+++ b/gearshift/src/main/res/drawable/list_item_color.xml
@@ -27,5 +27,5 @@
         android:color="#484848" />
 
     <item
-        android:color="@android:color/primary_text_light" />
+        android:color="@color/primary_dark" />
 </selector>
