--- a/gearshift/src/main/res/layout/torrent_list_item.xml
+++ b/gearshift/src/main/res/layout/torrent_list_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingStart="16dip"
-    android:paddingEnd="16dip"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:background="@drawable/list_activated_holo_light"
-    android:gravity="center_vertical"
-    android:orientation="horizontal" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:paddingStart="16dip"
+              android:paddingEnd="16dip"
+              android:paddingTop="8dp"
+              android:paddingBottom="8dp"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp"
+              android:minHeight="?android:attr/listPreferredItemHeightSmall"
+              android:background="@drawable/list_activated_holo_light"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -59,7 +60,8 @@
             android:textColor="@drawable/list_item_color"
             android:textAppearance="?android:attr/textAppearanceListItem"
             android:textSize="@dimen/torrent_list_name_text_size"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="Torrent Name"/>
 
         <TextView
             android:id="@+id/traffic"
@@ -68,7 +70,8 @@
             android:fontFamily="sans-serif-light"
             android:textColor="@drawable/list_item_color"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:textSize="@dimen/torrent_list_traffic_text_size" />
+            android:textSize="@dimen/torrent_list_traffic_text_size"
+            tools:text="482.72MB of 1.011MB (47.7%) - 22 minutes remaining"/>
 
         <TextView
             android:id="@+id/status"
@@ -77,7 +80,8 @@
             android:fontFamily="sans-serif-light"
             android:textColor="@drawable/list_item_color"
             android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
-            android:textSize="@dimen/torrent_list_status_text_size" />
+            android:textSize="@dimen/torrent_list_status_text_size"
+            tools:text="Downloading from 20 of 60 connected peers" />
 
         <TextView
             android:id="@+id/error_text"
@@ -90,7 +94,9 @@
             android:textColor="@drawable/list_item_error_color"
             android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
             android:textSize="@dimen/torrent_list_error_text_size"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:text="Error fetching peers"
+            tools:visibility="visible" />
     </LinearLayout>
 
 
