--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -45,9 +45,10 @@
 	   	<item name="android:paddingLeft">16dp</item>
 	   	<item name="android:paddingRight">16dp</item>
 	    <item name="android:paddingTop">8dp</item>
-	    <item name="android:paddingBottom">16dp</item>
+	    <item name="android:paddingBottom">0dp</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
 	    <item name="android:textColor">#333</item>
-	    <item name="android:textSize">16sp</item>
+	    <item name="android:textSize">@dimen/torrent_list_name_text_size</item>
 	    <item name="android:textStyle">bold</item>
 	    <item name="android:gravity">center</item>
 	    <item name="android:ellipsize">end</item>
@@ -58,7 +59,26 @@
 	    <item name="android:layout_width">match_parent</item>
 	    <item name="android:layout_height">wrap_content</item>
     </style>
-    
+
+    <style name="TorrentSubtitle">
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textColor">#444</item>
+        <item name="android:textSize">@dimen/torrent_list_status_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:shadowColor">#77000000</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style name="CardContainer">
         <item name="android:layout_marginLeft">12dp</item>
         <item name="android:layout_marginRight">12dp</item>
