--- a/gearshift/src/main/res/values/refs.xml
+++ b/gearshift/src/main/res/values/refs.xml
@@ -8,5 +8,7 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
     <item name="ic_home" type="drawable">@drawable/ic_launcher</item>
+    <item name="default_in_interpolator" type="interpolator">@android:interpolator/accelerate_decelerate</item>
+    <item name="default_out_interpolator" type="interpolator">@android:interpolator/accelerate_decelerate</item>
 
 </resources>
