--- a/gearshift/src/main/res/drawable/filter_list_item_background.xml
+++ b/gearshift/src/main/res/drawable/filter_list_item_background.xml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_focused="true" android:state_pressed="true"
-        android:drawable="@color/highlight_dark" />
+    <item android:state_pressed="true" android:drawable="@color/highlight_dark" />
 
-    <item android:state_focused="false" android:state_pressed="true"
-        android:drawable="@color/highlight_dark" />
-
-    <item android:state_focused="true"
-        android:drawable="@color/highlight_dark" />
+    <item android:state_focused="true" android:drawable="@color/highlight_dark" />
     
-    <item android:state_selected="true"
-         android:drawable="@drawable/filter_border_right"/>
-
-    <item android:state_checked="true"
-         android:drawable="@drawable/filter_border_right"/>
-
-    <item android:state_activated="true"
-         android:drawable="@drawable/filter_border_right"/>
+    <item android:state_activated="true" android:drawable="@drawable/filter_border_right"/>
   
-    <item
-        android:drawable="@color/transparent" />
+    <item android:drawable="@color/transparent" />
 
 </selector>
