--- a/gearshift/src/main/res/layout/activity_torrent_list.xml
+++ b/gearshift/src/main/res/layout/activity_torrent_list.xml
@@ -12,24 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            style="@style/DefaultToolbar">
-
-            <android.support.v7.widget.SwitchCompat
-                android:id="@+id/menu_alt_speed"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="8dp"
-                android:layout_gravity="end"
-                android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp">
-
-            </android.support.v7.widget.SwitchCompat>
-
-        </android.support.v7.widget.Toolbar>
+        <include layout="@layout/toolbar"/>
 
         <include layout="@layout/torrent_list" />
     </LinearLayout>
