--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -7,10 +7,9 @@
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/control_activated</item>
         <item name="colorControlNormal">@color/material_blue_grey_800</item>
         <item name="colorControlHighlight">@color/control_highlight</item>
-        <item name="colorControlActivated">@color/control_activated</item>
         <item name="colorSwitchThumbNormal">@android:color/white</item>
         <item name="actionBarStyle">@style/DefaultToolbar</item>
         <item name="windowActionBar">false</item>
@@ -39,6 +38,7 @@
         <item name="android:background">?attr/colorPrimary</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <style name="TorrentTitle">
