inherit from the default toolbar, to turn the rail white

--- a/gearshift/src/main/res/layout/alt_speed_switch.xml
+++ b/gearshift/src/main/res/layout/alt_speed_switch.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.SwitchCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.SwitchCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/menu_alt_speed"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginRight="8dp"
     android:layout_gravity="end"
-    android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp" />
+    android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp"/>
