--- a/gearshift/src/main/res/drawable/border_bottom_inverted.xml
+++ b/gearshift/src/main/res/drawable/border_bottom_inverted.xml
@@ -7,7 +7,7 @@
 	</item>
 	<item android:bottom="2dp">
 	    <shape android:shape="rectangle">
-	        <solid android:color="#333" />
+	        <solid android:color="@color/filter_list_header" />
 	    </shape>
 	</item>
 </layer-list>
