--- a/gearshift/src/main/res/layout/filter_list_profile_item.xml
+++ b/gearshift/src/main/res/layout/filter_list_profile_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/filter_list_profile_item_background" >
 
     <TextView
         android:id="@android:id/text1"
@@ -14,9 +15,7 @@
         android:fontFamily="sans-serif-condensed"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:gravity="center_vertical"
-        android:background="@drawable/filter_list_profile_item_background"
-        />
+        android:gravity="center_vertical" />
 
     <TextView
         android:id="@android:id/text2"
@@ -27,7 +26,5 @@
         android:paddingBottom="8dp"
         android:textSize="10sp"
         android:fontFamily="sans-serif-condensed"
-        android:gravity="center_vertical"
-        android:background="@drawable/filter_list_profile_item_background"
-        />
+        android:gravity="center_vertical" />
 </LinearLayout>
