--- a/gearshift/src/main/res/layout/action_progress_bar.xml
+++ b/gearshift/src/main/res/layout/action_progress_bar.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/action_progress_bar_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp" >
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
     <ProgressBar
         android:layout_width="32dp"
