--- a/gearshift/src/main/res/layout/settings_profile_item.xml
+++ b/gearshift/src/main/res/layout/settings_profile_item.xml
@@ -5,14 +5,13 @@
 	android:minHeight="48dp"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:gravity="center_vertical"
+    android:paddingRight="?android:attr/scrollbarSize"
     android:paddingEnd="?android:attr/scrollbarSize"
-    android:layout_marginStart="2dip"
-    android:layout_marginEnd="6dip"
     android:layout_marginTop="6dip"
     android:layout_marginBottom="6dip"
     android:layout_weight="1">
 
-    <TextView android:id="@+android:id/title"
+    <TextView android:id="@android:id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
@@ -20,11 +19,12 @@
         android:ellipsize="marquee"
         android:fadingEdge="horizontal" />
 
-    <TextView android:id="@+android:id/summary"
+    <TextView android:id="@android:id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@android:id/title"
-        android:layout_alignStart="@android:id/title"
+        android:layout_below="@android:id/text1"
+        android:layout_alignLeft="@android:id/text1"
+        android:layout_alignStart="@android:id/text1"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:ellipsize="end"
         android:maxLines="2" />
