--- a/gearshift/src/main/res/menu/add_profile_option.xml
+++ b/gearshift/src/main/res/menu/add_profile_option.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_add_profile"
-        android:visible="true"
-        app:showAsAction="always"
-        android:title="@string/add_profile_option" />
+
+    <item android:id="@+id/add_profile"
+        android:icon="@drawable/ic_add_white_36dp"
+        android:title="@string/add_profile_option"
+        app:showAsAction="always" />
 
 </menu>
