--- a/gearshift/src/main/res/layout/settings_profile_header.xml
+++ b/gearshift/src/main/res/layout/settings_profile_header.xml
@@ -4,4 +4,6 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     style="?android:attr/listSeparatorTextViewStyle"/>
