--- a/gearshift/src/main/res/drawable/list_selectable_activated_light.xml
+++ b/gearshift/src/main/res/drawable/list_selectable_activated_light.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@color/control_highlight" />
     <item android:state_focused="true" android:drawable="@color/control_highlight" />
