--- a/gearshift/src/main/res/layout/settings_profile_item.xml
+++ b/gearshift/src/main/res/layout/settings_profile_item.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:fontFamily="sans-serif-condensed"
         android:ellipsize="marquee"
         android:fadingEdge="horizontal" />
 
@@ -25,6 +26,7 @@
         android:layout_alignLeft="@android:id/text1"
         android:layout_alignStart="@android:id/text1"
         android:textAppearance="?android:attr/textAppearanceSmall"
+        android:fontFamily="sans-serif-light"
         android:ellipsize="end"
         android:maxLines="2" />
 
