--- a/gearshift/src/main/res/values-sw600dp/dimens.xml
+++ b/gearshift/src/main/res/values-sw600dp/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="preference_list_padding">24dp</dimen>
+
     <dimen name="torrent_list_name_text_size">18sp</dimen>
     <dimen name="torrent_list_traffic_text_size">12sp</dimen>
     <dimen name="torrent_list_status_text_size">14sp</dimen>
