--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -119,11 +119,11 @@
         <item name="android:layout_height">32dp</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_marginLeft">-32dp</item>
-        <item name="android:background">@drawable/ic_section_expand</item>
+        <item name="android:background">@drawable/ic_expand_more_grey600_36dp</item>
     </style>
     
     <style name="CardHeaderExpanderImageCollapse" parent="@style/CardHeaderExpanderImage">
-        <item name="android:background">@drawable/ic_section_collapse</item>
+        <item name="android:rotation">180</item>
     </style>
 
     <style name="CardContent">
