--- a/gearshift/src/main/res/menu/add_directory_option.xml
+++ b/gearshift/src/main/res/menu/add_directory_option.xml
@@ -3,6 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_add_directory"
         android:visible="true"
+        android:icon="@drawable/ic_my_library_add_white_36dp"
         app:showAsAction="always"
         android:title="@string/add_directory_option" />
 
