--- a/gearshift/src/main/res/layout/toolbar.xml
+++ b/gearshift/src/main/res/layout/toolbar.xml
@@ -4,4 +4,5 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:elevation="4dp"
     style="@style/DefaultToolbar"/>
