--- a/gearshift/src/main/res/layout/alt_speed_switch.xml
+++ b/gearshift/src/main/res/layout/alt_speed_switch.xml
@@ -6,4 +6,5 @@
     android:layout_height="match_parent"
     android:layout_marginRight="8dp"
     android:layout_gravity="end"
+    android:contentDescription="@string/alt_speed"
     android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp"/>
