--- a/gearshift/src/main/res/layout/alt_speed_switch.xml
+++ b/gearshift/src/main/res/layout/alt_speed_switch.xml
@@ -4,7 +4,7 @@
     android:id="@+id/menu_alt_speed"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_marginRight="8dp"
     android:layout_gravity="end"
+    android:padding="12dp"
     android:contentDescription="@string/alt_speed"
     android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp"/>
