--- a/gearshift/src/main/res/drawable/filter_list_item_background.xml
+++ b/gearshift/src/main/res/drawable/filter_list_item_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:drawable="@color/highlight_dark" />
+    <item android:state_pressed="true" android:drawable="@color/accent_light" />
 
-    <item android:state_focused="true" android:drawable="@color/highlight_dark" />
+    <item android:state_focused="true" android:drawable="@color/accent_light" />
     
     <item android:state_activated="true" android:drawable="@drawable/filter_border_right"/>
   
-    <item android:drawable="@color/transparent" />
+    <item android:drawable="@android:color/transparent" />
 
 </selector>
