--- a/gearshift/src/main/res/drawable/filter_list_profile_item_background.xml
+++ b/gearshift/src/main/res/drawable/filter_list_profile_item_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_focused="true" android:drawable="@color/primary_dark" />
+    <item android:state_focused="true" android:drawable="@color/accent" />
 
-    <item android:state_pressed="true" android:drawable="@color/primary_dark" />
+    <item android:state_pressed="true" android:drawable="@color/accent" />
 
-    <item android:state_activated="true" android:drawable="@drawable/filter_border_right"/>
+    <item android:state_activated="true" android:drawable="@drawable/filter_profile_border_right"/>
   
     <item android:drawable="@color/primary" />
 </selector>
