--- a/gearshift/src/main/res/drawable/filter_profile_border_right.xml
+++ b/gearshift/src/main/res/drawable/filter_profile_border_right.xml
@@ -7,7 +7,7 @@
 	</item>
 	<item android:left="8dp">
 	    <shape android:shape="rectangle">
-	        <solid android:color="@color/list_menu_background" />
+	        <solid android:color="@color/primary" />
 	    </shape>
 	</item>
 </layer-list>
