--- a/gearshift/src/main/res/layout/fragment_torrent_list.xml
+++ b/gearshift/src/main/res/layout/fragment_torrent_list.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e8e8e8" >
+    android:background="@color/torrent_list_background" >
 
     <LinearLayout
         android:layout_width="match_parent"
