--- a/gearshift/src/main/res/menu/torrent_list_fragment.xml
+++ b/gearshift/src/main/res/menu/torrent_list_fragment.xml
@@ -9,7 +9,7 @@
     <item android:id="@+id/sort"
           android:title="@string/sort"
           android:icon="@drawable/ic_sort_white_24dp"
-          app:showAsAction="never"
+          app:showAsAction="ifRoom"
           android:visible="false">
 
         <menu>
