--- a/gearshift/src/main/res/layout/torrents_listview.xml
+++ b/gearshift/src/main/res/layout/torrents_listview.xml
@@ -8,10 +8,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView android:id="@android:id/list"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:drawSelectorOnTop="false" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include layout="@layout/error_layer" />
+
+            <ListView android:id="@android:id/list"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:drawSelectorOnTop="false" />
+        </LinearLayout>
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView android:id="@android:id/empty"
