--- a/gearshift/src/main/res/menu/torrent_list_activity.xml
+++ b/gearshift/src/main/res/menu/torrent_list_activity.xml
@@ -5,7 +5,7 @@
     <item android:id="@+id/menu_refresh"
           android:icon="@drawable/ic_refresh_white_24dp"
           android:visible="true"
-          app:showAsAction="ifRoom"
+          app:showAsAction="never"
           android:menuCategory="system"
           android:orderInCategory="1"
           android:title="@string/refresh"
