Revert "Move the refresh button from the toolbar to the overflow menu"
This reverts commit 896820f4c4a973fd9ef195226e32bff137edff0c.

This approach doesn't work. It causes the refresh to trigger on every
up movement, rather than at the top of the list.

--- a/gearshift/src/main/res/layout/fragment_torrent_list.xml
+++ b/gearshift/src/main/res/layout/fragment_torrent_list.xml
@@ -44,6 +44,9 @@
 
         </android.support.v7.widget.Toolbar>
 
+
     </LinearLayout>
+
+    <include layout="@layout/error_layer" />
 
 </FrameLayout>
