--- a/gearshift/src/main/res/layout/new_torrent_dialog.xml
+++ b/gearshift/src/main/res/layout/new_torrent_dialog.xml
@@ -31,6 +31,7 @@
                 android:hint="@string/hint_download_directory"
                 android:completionThreshold="1"
                 android:inputType="textNoSuggestions"
+                android:dropDownHeight="@dimen/location_popup_height"
                 android:fontFamily="sans-serif"
                 android:textSize="16sp" />
 
