--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -217,4 +217,12 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="BorderlessButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textColor">@color/control_activated</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:padding">8dp</item>
+    </style>
 </resources>
