--- a/gearshift/src/main/res/values-v21/styles.xml
+++ b/gearshift/src/main/res/values-v21/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:layout_marginRight">12dp</item>
         <item name="android:layout_marginTop">0dp</item>
         <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:elevation">@dimen/card_elevation</item>
         <item name="cardCornerRadius">2dp</item>
     </style>
 
