--- a/gearshift/src/main/res/layout/torrent_profile_selector.xml
+++ b/gearshift/src/main/res/layout/torrent_profile_selector.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
-    android:orientation="vertical" >
+    android:orientation="vertical">
     
-    <TextView android:id="@+id/name"
+    <TextView
+        style="?android:attr/spinnerItemStyle"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMediumInverse" />
+        tools:text="Transmission Profile"/>
+
 </LinearLayout>
