--- a/gearshift/src/main/res/layout/torrent_profile_selector_dropdown.xml
+++ b/gearshift/src/main/res/layout/torrent_profile_selector_dropdown.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:paddingBottom="4dp"
     android:paddingTop="4dp"
-    android:orientation="vertical" >
+    android:orientation="vertical">
     
-    <TextView android:id="@+id/name"
+    <TextView
+        style="?android:attr/spinnerDropDownItemStyle"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMediumInverse" />
+        tools:text="Transmission Profile" />
     
-    <TextView android:id="@+id/summary"
+    <TextView
+        style="?android:attr/spinnerDropDownItemStyle"
+        android:id="@+id/summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
-        android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+        tools:text="Profile description" />
 
 </LinearLayout>
