--- a/gearshift/src/main/res/values-sw600dp/dimens.xml
+++ b/gearshift/src/main/res/values-sw600dp/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="torrent_list_traffic_text_size">12sp</dimen>
     <dimen name="torrent_list_status_text_size">14sp</dimen>
     <dimen name="torrent_list_error_text_size">12sp</dimen>
+
+    <dimen name="dialog_label_text_size">12sp</dimen>
 </resources>
