--- a/gearshift/src/main/res/values/dimens.xml
+++ b/gearshift/src/main/res/values/dimens.xml
@@ -9,5 +9,7 @@
     <dimen name="torrent_list_status_text_size">12sp</dimen>
     <dimen name="torrent_list_error_text_size">10sp</dimen>
 
+    <dimen name="dialog_label_text_size">10sp</dimen>
+
     <dimen name="location_popup_height">150dp</dimen>
 </resources>
