--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -229,4 +229,13 @@
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:padding">8dp</item>
     </style>
+
+    <style name="DialogLabel">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">@dimen/dialog_label_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
