make the drawer go underneath the status bar, as per the guidelines

--- a/gearshift/src/main/res/values-v21/dimens.xml
+++ b/gearshift/src/main/res/values-v21/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="card_elevation">2dp</dimen>
     <dimen name="card_raised_translation">8dp</dimen>
+    <dimen name="status_bar_height">24dp</dimen>
 </resources>
