--- a/gearshift/src/main/res/values/dimens.xml
+++ b/gearshift/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="dialog_label_text_size">10sp</dimen>
 
     <dimen name="location_popup_height">150dp</dimen>
+
+    <dimen name="status_bar_height">0dp</dimen>
 </resources>
