Add an option to disable the add torrent options dialog
When unchecked, any torrent will be added automatically to the default
download directory

--- a/gearshift/src/main/res/xml/general_preferences.xml
+++ b/gearshift/src/main/res/xml/general_preferences.xml
@@ -35,7 +35,12 @@
         <CheckBoxPreference
             android:key="show_status"
             android:title="@string/show_status_bar"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
+
+        <CheckBoxPreference
+            android:key="show_add_dialog"
+            android:title="@string/show_add_dialog"
+            android:defaultValue="true" />
 
     </PreferenceCategory>
     
